ecmascript/parser/tests/typescript-errors/tsc/async/es2017/asyncArrowFunction/asyncArrowFunction8_es2017/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es2017/asyncArrowFunction/asyncArrowFunction8_es2017/input.ts:5:14
  |
5 |   var v = { [await]: foo }
  |              ^^^^^

